added mechanism to potentially update server URLs on launch