@@ -21,6 +21,10 @@ package com.actelion.research.datawarrior.help;
 import com.actelion.research.datawarrior.DEFrame;
 import com.actelion.research.datawarrior.DataWarrior;
 import com.actelion.research.datawarrior.task.AbstractTask;
+import com.actelion.research.datawarrior.task.db.BBCommunicator;
+import com.actelion.research.datawarrior.task.db.CODCommunicator;
+import com.actelion.research.datawarrior.task.db.ChemblCommunicator;
+import com.actelion.research.datawarrior.task.db.PatentReactionCommunicator;
 import com.actelion.research.gui.hidpi.HiDPIHelper;
 import com.actelion.research.util.BrowserControl;
 import com.actelion.research.util.Platform;
@@ -32,11 +36,15 @@ import java.awt.*;
 import java.awt.datatransfer.StringSelection;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.io.*;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.net.*;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
 import java.nio.channels.ReadableByteChannel;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.MessageDigest;
@@ -50,7 +58,7 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 
 	// IMPORTANT: When creating a new manual(!!!) installer (not an update for automatic deployment),
 	// then DataWarriorLauncher.BASE_VERSION must also be changed to match this DATAWARRIOR_VERSION!
-	public static final String DATAWARRIOR_VERSION = "v06.00.00";	// format must be v00.00.00
+	public static final String DATAWARRIOR_VERSION = "v06.01.00";	// format must be v00.00.00
 
 	private static final String PREFERENCES_2ND_POST_INSTALL_INFO_SERVER = "2nd_post_install_info_server";
 	public static final String PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS = "post_install_info_failure_time";
@@ -65,6 +73,14 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 	public static final String PREFERENCES_KEY_HANDLED_NEWS_IDS = "handledNewsIDs";
 
 	private static final String PROPERTY_2ND_POST_INSTALL_INFO_SERVER = "2nd_post_install_info_server";
+	private static final String PROPERTY_BB_SERVER_1 = "bb_server_1";
+	private static final String PROPERTY_BB_SERVER_2 = "bb_server_2";
+	private static final String PROPERTY_CHEMBL_SERVER_1 = "chembl_server_1";
+	private static final String PROPERTY_CHEMBL_SERVER_2 = "chembl_server_2";
+	private static final String PROPERTY_COD_SERVER_1 = "cod_server_1";
+	private static final String PROPERTY_COD_SERVER_2 = "cod_server_2";
+	private static final String PROPERTY_PRXN_SERVER_1 = "prxn_server_1";
+	private static final String PROPERTY_PRXN_SERVER_2 = "prxn_server_2";
 	private static final String PROPERTY_AUTO_UPDATE_VERSION = "auto_update_version"; // format v00.00.00
 	private static final String PROPERTY_AUTO_UPDATE_REQUIRED_BASE_VERSION = "auto_base_version"; // format v00.00.00
 	private static final String PROPERTY_AUTO_UPDATE_URL = "auto_update_url";
@@ -91,9 +107,53 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 		return sIsUpdating;
 		}
 
-	private static void handlePostInstallMessages(DEFrame parent) {
-		Preferences prefs = DataWarrior.getPreferences();
+	public static void getPostInstallInfoAndHandleUpdates(DEFrame parent, boolean skipUpdateHandling) {
+		new Thread(() -> {
+			Preferences prefs = DataWarrior.getPreferences();
 
+			sPostInstallInfo = new Properties();
+			String id = ""+prefs.getLong(DataWarrior.PREFERENCES_KEY_FIRST_LAUNCH, 0L);
+			String os = System.getProperty("os.name").replace(' ', '_');
+			String params = "?what=properties&os="+os+"&current="+DATAWARRIOR_VERSION+"&id="+id;
+			String error = getPostInstallInfo(URL1+params);
+			if (error != null) {
+				String url = prefs.get(PREFERENCES_2ND_POST_INSTALL_INFO_SERVER, URL2);
+				error = getPostInstallInfo(url + params);
+				}
+			if (error != null)
+				error = getPostInstallInfo(URL2 + params);
+
+			boolean consistentFailure = false;
+			if (error == null) {
+				updateServerURLs(prefs);
+				handlePostInstallMessages(parent, prefs);
+				prefs.putLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, 0L);
+				}
+			else {
+				long pipf_millis = prefs.getLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, 0L);
+				long current = System.currentTimeMillis();
+				if (pipf_millis == 0L)
+					prefs.putLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, current);
+
+				// if recent retrieval(s) were all failures and if first of them was more than 24 hours ago
+				if (pipf_millis != 0L && current-pipf_millis > 86400000L)
+					consistentFailure = true;
+				}
+
+			if (!skipUpdateHandling) {
+				String modeString = prefs.get(PREFERENCES_KEY_UPDATE_MODE, PREFERENCES_UPDATE_MODE_CODE[PREFERENCES_UPDATE_MODE_ASK]);
+				int updateMode = AbstractTask.findListIndex(modeString, PREFERENCES_UPDATE_MODE_CODE, PREFERENCES_UPDATE_MODE_ASK);
+				if (updateMode != PREFERENCES_UPDATE_MODE_NEVER) {
+					if (consistentFailure)
+						askForBrowser(URL1 + params, parent, prefs, error);
+					else
+						handleUpdate(parent, prefs, updateMode);
+					}
+				}
+			} ).start();
+		}
+
+	private static void updateServerURLs(Preferences prefs) {
 		String current2ndURL = prefs.get(PREFERENCES_2ND_POST_INSTALL_INFO_SERVER, null);
 		String new2ndURL = sPostInstallInfo.getProperty(PROPERTY_2ND_POST_INSTALL_INFO_SERVER);
 		if (new2ndURL == null) {
@@ -104,8 +164,36 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 			prefs.put(PREFERENCES_2ND_POST_INSTALL_INFO_SERVER, new2ndURL);
 			}
 
-		// TODO other service URLs
+		String bbServerURL1 = sPostInstallInfo.getProperty(PROPERTY_BB_SERVER_1);
+		if (bbServerURL1 != null)
+			BBCommunicator.setPrimaryServerURL(bbServerURL1);
+		String bbServerURL2 = sPostInstallInfo.getProperty(PROPERTY_BB_SERVER_2);
+		if (bbServerURL2 != null)
+			BBCommunicator.setSecondaryServerURL(bbServerURL2);
 
+		String chemblServerURL1 = sPostInstallInfo.getProperty(PROPERTY_CHEMBL_SERVER_1);
+		if (chemblServerURL1 != null)
+			ChemblCommunicator.setPrimaryServerURL(chemblServerURL1);
+		String chemblServerURL2 = sPostInstallInfo.getProperty(PROPERTY_CHEMBL_SERVER_2);
+		if (chemblServerURL2 != null)
+			ChemblCommunicator.setSecondaryServerURL(chemblServerURL2);
+
+		String codServerURL1 = sPostInstallInfo.getProperty(PROPERTY_COD_SERVER_1);
+		if (codServerURL1 != null)
+			CODCommunicator.setPrimaryServerURL(codServerURL1);
+		String codServerURL2 = sPostInstallInfo.getProperty(PROPERTY_COD_SERVER_2);
+		if (codServerURL2 != null)
+			CODCommunicator.setSecondaryServerURL(codServerURL2);
+
+		String prxnServerURL1 = sPostInstallInfo.getProperty(PROPERTY_PRXN_SERVER_1);
+		if (prxnServerURL1 != null)
+			PatentReactionCommunicator.setPrimaryServerURL(prxnServerURL1);
+		String prxnServerURL2 = sPostInstallInfo.getProperty(PROPERTY_PRXN_SERVER_2);
+		if (prxnServerURL2 != null)
+			PatentReactionCommunicator.setSecondaryServerURL(prxnServerURL2);
+		}
+
+	private static void handlePostInstallMessages(DEFrame parent, Preferences prefs) {
 		Set<String> propertyNames = sPostInstallInfo.stringPropertyNames();
 		TreeMap<String, DENews> newsMap = new TreeMap<>();
 		for (String propertyName : propertyNames) {
@@ -139,204 +227,176 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 		prefs.put(PREFERENCES_KEY_HANDLED_NEWS_IDS, newHandledNewsIDs.toString());
 		}
 
-	public static void getPostInstallInfoAndHandleUpdates(DEFrame parent, boolean skipUpdateHandling) {
-		new Thread(() -> {
-			Preferences prefs = DataWarrior.getPreferences();
-
-			sPostInstallInfo = new Properties();
-			String id = ""+prefs.getLong(DataWarrior.PREFERENCES_KEY_FIRST_LAUNCH, 0L);
-			String os = System.getProperty("os.name").replace(' ', '_');
-			String params = "?what=properties&os="+os+"&current="+DATAWARRIOR_VERSION+"&id="+id;
-			String error = getPostInstallInfo(URL1+params);
-			if (error != null) {
-				String url = prefs.get(PREFERENCES_2ND_POST_INSTALL_INFO_SERVER, URL2);
-				if (prefs != null)
-					error = getPostInstallInfo(url + params);
-				}
-			if (error != null)
-				error = getPostInstallInfo(URL2 + params);
-
-			boolean consistentFailure = false;
-			if (error == null) {
-				handlePostInstallMessages(parent);
-				prefs.putLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, 0L);
-				}
-			else {
-				long pipf_millis = prefs.getLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, 0L);
-				long current = System.currentTimeMillis();
-				if (pipf_millis == 0L)
-					prefs.putLong(PREFERENCES_POST_INSTALL_INFO_FAILURE_MILLIS, current);
-
-				// if recent retrieval(s) were all failures and if first of them was more than 24 hours ago
-				if (pipf_millis != 0L && current-pipf_millis > 86400000L)
-					consistentFailure = true;
-				}
-
-			if (skipUpdateHandling)
-				return;
-
-			String modeString = prefs.get(PREFERENCES_KEY_UPDATE_MODE, PREFERENCES_UPDATE_MODE_CODE[PREFERENCES_UPDATE_MODE_ASK]);
-			int updateMode = AbstractTask.findListIndex(modeString, PREFERENCES_UPDATE_MODE_CODE, PREFERENCES_UPDATE_MODE_ASK);
-			if (updateMode == PREFERENCES_UPDATE_MODE_NEVER)
-				return;
-
-			if (consistentFailure) {
-				askForBrowser(URL1 + params, parent, prefs, error);
-				return;
-				}
-
-			String availableInstaller = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_VERSION);
-			if (availableInstaller != null
-			 && availableInstaller.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
-			 && availableInstaller.compareTo(DATAWARRIOR_VERSION) > 0) {
-				String url = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_URL, "URL unexpectedly not available.");
-				String detail = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_DETAIL, "Update detail information not available.");
-				SwingUtilities.invokeLater(() ->
+	private static void handleUpdate(DEFrame parent, Preferences prefs, int updateMode) {
+		String availableInstaller = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_VERSION);
+		if (availableInstaller != null
+				&& availableInstaller.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
+				&& availableInstaller.compareTo(DATAWARRIOR_VERSION) > 0) {
+			String url = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_URL, "URL unexpectedly not available.");
+			String detail = sPostInstallInfo.getProperty(PROPERTY_MANUAL_UPDATE_DETAIL, "Update detail information not available.");
+			SwingUtilities.invokeLater(() ->
 					new DEUpdateHandler(parent, availableInstaller, url, detail).setVisible(true) );
-				return;
-				}
+			return;
+		}
 
-			String availableVersion = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_VERSION);
-			if (availableVersion == null
-			 || !availableVersion.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
-			 || availableVersion.compareTo(DATAWARRIOR_VERSION) <= 0)
-				return;
+		String availableVersion = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_VERSION);
+		if (availableVersion == null
+				|| !availableVersion.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
+				|| availableVersion.compareTo(DATAWARRIOR_VERSION) <= 0)
+			return;
 
-			String requiredBaseVersion = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_REQUIRED_BASE_VERSION);
-			if (requiredBaseVersion != null
-			 && requiredBaseVersion.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
-			 || requiredBaseVersion.compareTo(DATAWARRIOR_VERSION) > 0) {
-				SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-						"DataWarrior couldn't update automatically, because the installed version '"+DATAWARRIOR_VERSION+"'\nis too old. Required is at least '"+requiredBaseVersion+"'.\nTry updating manually by using either the official installer or the development\npatch files from https://openmolecules.org/datawarrior/download.html",
-						"Update Failed", JOptionPane.ERROR_MESSAGE));
-				return;
-				}
+		String requiredBaseVersion = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_REQUIRED_BASE_VERSION);
+		if (requiredBaseVersion != null
+				&& requiredBaseVersion.matches("v\\d\\d\\.\\d\\d\\.\\d\\d")
+				&& requiredBaseVersion.compareTo(DATAWARRIOR_VERSION) > 0) {
+			SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+					"DataWarrior couldn't update automatically, because the installed version '"+DATAWARRIOR_VERSION+"'\nis too old. Required is at least '"+requiredBaseVersion+"'.\nTry updating manually by using either the official installer or the development\npatch files from https://openmolecules.org/datawarrior/download.html",
+					"Update Failed", JOptionPane.ERROR_MESSAGE));
+			return;
+		}
 
-			String updateURL = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_URL, DEFAULT_UPDATE_URL);
-			if (updateURL == null)
-				return;
+		String updateURL = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_URL, DEFAULT_UPDATE_URL);
+		if (updateURL == null)
+			return;
 
-			if (updateMode == PREFERENCES_UPDATE_MODE_ASK) {
+		if (updateMode == PREFERENCES_UPDATE_MODE_ASK) {
+			try {
+				SwingUtilities.invokeAndWait(() ->
+						sOK = JOptionPane.showConfirmDialog(parent,
+								"A DataWarrior update (version: "+availableVersion+") is available. You use "+DATAWARRIOR_VERSION+"\n"
+										+ "Do you want to download the update and use it, when you open DataWarrior next time?",
+								"Download DataWarrior Update?", JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION);
+			} catch (Exception ie) {}
+			if (!sOK)
+				return;
+		}
+
+		String updatePath = getUpdatePath(parent, prefs);
+		if (updatePath != null) {
+			String md5sum = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_MD5SUM);
+			final String updateName = "datawarrior_"+availableVersion;
+			final String tempFilePath = updatePath.concat(File.separator).concat(updateName).concat(".temp");
+			final String finalFilePath = updatePath.concat(File.separator).concat(updateName).concat(".jar");
+
+			// Don't download, if we have that file already
+			File finalFile = new File(finalFilePath);
+			if (finalFile.exists()) {
+				if (md5sum == null || md5sum.equalsIgnoreCase(md5sum(finalFilePath)))
+					return;
+
+				// If we have an older file with unexpected md5sum, then delete that.
+				boolean success = false;
+				String msg = null;
 				try {
-					SwingUtilities.invokeAndWait(() ->
-							sOK = JOptionPane.showConfirmDialog(parent,
-									"A DataWarrior update (version: "+availableVersion+") is available. You use "+DATAWARRIOR_VERSION+"\n"
-											+ "Do you want to download the update and use it, when you open DataWarrior next time?",
-									"Download DataWarrior Update?", JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION);
-					} catch (Exception ie) {}
-				if (!sOK)
+					success = finalFile.delete();
+				}
+				catch (SecurityException e) {
+					msg = e.getMessage();
+				}
+				if (!success) {
+					final String msgLine = (msg == null) ? "" : "\nMessage: "+msg;
+					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+							"DataWarrior could not delete broken file '"+finalFilePath+"'.\nTry deleting it manually!"+msgLine,
+							"Deletion Failed", JOptionPane.ERROR_MESSAGE));
+					return;
+				}
+			}
+
+			File tempFile = new File(tempFilePath);
+			if (tempFile.exists()) {
+				if (md5sum == null || md5sum.equalsIgnoreCase(md5sum(tempFilePath))) {
+					boolean success = false;
+					String msg = null;
+					try {
+						success = tempFile.renameTo(finalFile);
+					}
+					catch (SecurityException e) {
+						msg = e.getMessage();
+					}
+					if (!success) {
+						final String msgLine = (msg == null) ? "" : "\nMessage: "+msg;
+						SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+								"DataWarrior could not rename successfully downloaded '" + tempFilePath + "'."+msgLine,
+								"File Rename Failed", JOptionPane.ERROR_MESSAGE));
+					}
 					return;
 				}
 
-			String updatePath = getUpdatePath(parent);
-			if (updatePath != null) {
-				String md5sum = sPostInstallInfo.getProperty(PROPERTY_AUTO_UPDATE_MD5SUM);
-				final String updateName = "datawarrior_"+availableVersion;
-				final String tempFilePath = updatePath.concat(File.separator).concat(updateName).concat(".temp");
-				final String finalFilePath = updatePath.concat(File.separator).concat(updateName).concat(".jar");
-
-				// Don't download, if we have that file already
-				File finalFile = new File(finalFilePath);
-				if (finalFile.exists()) {
-					if (md5sum == null || md5sum.equalsIgnoreCase(md5sum(finalFilePath)))
-						return;
-
-					// If we have an older file with unexpected md5sum, then delete that.
-					try {
-						finalFile.delete();
-						}
-					catch (SecurityException e) {
-						SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-								"DataWarrior could not delete broken file '"+finalFilePath+"'.\nTry deleting it manually!\nMessage: "+e.getMessage(),
-								"Deletion Failed", JOptionPane.ERROR_MESSAGE));
-						return;
-						}
-					}
-
-				File tempFile = new File(tempFilePath);
-				if (tempFile.exists()) {
-					if (md5sum == null || md5sum.equalsIgnoreCase(md5sum(tempFilePath))) {
-						try {
-							tempFile.renameTo(finalFile);
-							}
-						catch (SecurityException e) {
-							SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-									"DataWarrior could not rename successfully downloaded '"+tempFilePath+"'.\nMessage: "+e.getMessage(),
-									"File Rename Failed", JOptionPane.ERROR_MESSAGE));
-							}
-						return;
-						}
-
-					// If we have an older file with unexpected md5sum, then delete that.
-					try {
-						tempFile.delete();
-						}
-					catch (SecurityException e) {
-						SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-								"DataWarrior could not delete broken file '"+tempFilePath+"'.\nTry deleting it manually!\nMessage: "+e.getMessage(),
-								"Deletion Failed", JOptionPane.ERROR_MESSAGE));
-						return;
-						}
-					}
-
+				// If we have an older file with unexpected md5sum, then delete that.
+				boolean success = false;
+				String msg = null;
 				try {
-					sIsUpdating = true;
-					URL url = new URL(updateURL+"/"+updateName+".jar");
-					ReadableByteChannel readableByteChannel = Channels.newChannel(url.openStream());
-					FileOutputStream fileOutputStream = new FileOutputStream(tempFilePath);
-					FileChannel fileChannel = fileOutputStream.getChannel();
-					fileChannel.transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
-					if (md5sum != null) {
-						String checksum = md5sum(tempFilePath);
-						if (!md5sum.equalsIgnoreCase(checksum)) {
-							SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-									"DataWarrior could download and write file '"+tempFilePath
-											+ "', but its md5sum\n"+checksum+" does not match the expected one "+md5sum,
-									"MD5 Mismatch", JOptionPane.ERROR_MESSAGE));
-							sIsUpdating = false;
-							return;
-							}
-						}
-					try {
-						tempFile.renameTo(finalFile);
-						}
-					catch (SecurityException e) {
+					success = tempFile.delete();
+				}
+				catch (SecurityException e) {
+					msg = e.getMessage();
+				}
+				if (!success) {
+					final String msgLine = (msg == null) ? "" : "\nMessage: "+msg;
+					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+							"DataWarrior could not delete broken file '"+tempFilePath+"'.\nTry deleting it manually!"+msgLine,
+							"Deletion Failed", JOptionPane.ERROR_MESSAGE));
+					return;
+				}
+			}
+
+			try {
+				sIsUpdating = true;
+				URL url = new URL(updateURL+"/"+updateName+".jar");
+				ReadableByteChannel readableByteChannel = Channels.newChannel(url.openStream());
+				FileOutputStream fileOutputStream = new FileOutputStream(tempFilePath);
+				FileChannel fileChannel = fileOutputStream.getChannel();
+				fileChannel.transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
+				if (md5sum != null) {
+					String checksum = md5sum(tempFilePath);
+					if (!md5sum.equalsIgnoreCase(checksum)) {
 						SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-								"DataWarrior could not rename successfully downloaded '"+tempFilePath+"'.\nMessage: "+e.getMessage(),
-								"File Rename Failed", JOptionPane.ERROR_MESSAGE));
+								"DataWarrior could download and write file '"+tempFilePath
+										+ "', but its md5sum\n"+checksum+" does not match the expected one "+md5sum,
+								"MD5 Mismatch", JOptionPane.ERROR_MESSAGE));
 						sIsUpdating = false;
 						return;
-						}
-
-					// remove older updates. Just keep the three newest ones
-					try {
-						File[] files = new File(updatePath).listFiles(file -> isDataWarriorUpdateJar(file));
-						if (files != null && files.length > 3) {
-							Arrays.sort(files, Comparator.comparing(File::getName));
-							for (int i=0; i<files.length-3; i++)
-								files[i].delete();
-							}
-						}
-					catch (Exception e) {}
-
-					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-							"DataWarrior has successfully updated to version '"+availableVersion+"'.\nNext time you start DataWarrior, this version will be used.",
-							"Updated Successfully", JOptionPane.INFORMATION_MESSAGE));
 					}
-				catch (IOException ioe) {
-					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-							"DataWarrior could not download or write file '"+tempFilePath+"'.\nMessage: "+ioe.getMessage(),
-							"Download Failed", JOptionPane.ERROR_MESSAGE));
-					}
-				catch (Throwable t) {
-					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
-							"Unexpected failure in DataWarrior update procedure\nMessage: "+t.getMessage(),
-							"DataWarrior Update Failed", JOptionPane.ERROR_MESSAGE));
-					}
-				sIsUpdating = false;
 				}
-			} ).start();
+				try {
+					tempFile.renameTo(finalFile);
+				}
+				catch (SecurityException e) {
+					SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+							"DataWarrior could not rename successfully downloaded '"+tempFilePath+"'.\nMessage: "+e.getMessage(),
+							"File Rename Failed", JOptionPane.ERROR_MESSAGE));
+					sIsUpdating = false;
+					return;
+				}
+
+				// remove older updates. Just keep the three newest ones
+				try {
+					File[] files = new File(updatePath).listFiles(file -> isDataWarriorUpdateJar(file));
+					if (files != null && files.length > 3) {
+						Arrays.sort(files, Comparator.comparing(File::getName));
+						for (int i=0; i<files.length-3; i++)
+							files[i].delete();
+					}
+				}
+				catch (Exception e) {}
+
+				SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+						"DataWarrior has successfully updated to version '"+availableVersion+"'.\nNext time you start DataWarrior, this version will be used.",
+						"Updated Successfully", JOptionPane.INFORMATION_MESSAGE));
+			}
+			catch (IOException ioe) {
+				SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+						"DataWarrior could not download or write file '"+tempFilePath+"'.\nMessage: "+ioe.getMessage(),
+						"Download Failed", JOptionPane.ERROR_MESSAGE));
+			}
+			catch (Throwable t) {
+				SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(parent,
+						"Unexpected failure in DataWarrior update procedure\nMessage: "+t.getMessage(),
+						"DataWarrior Update Failed", JOptionPane.ERROR_MESSAGE));
+			}
+			sIsUpdating = false;
 		}
+	}
 
 	private static String md5sum(String path) {
 		try {
@@ -396,8 +456,7 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 				&& filename.length() == 25;
 		}
 
-	private static String getUpdatePath(final Frame parent) {
-		Preferences prefs = DataWarrior.getPreferences();
+	private static String getUpdatePath(final Frame parent, Preferences prefs) {
 		String baseDir = prefs.get(PREFERENCES_KEY_UPDATE_PATH, null);
 		if (baseDir != null)
 			baseDir = getWritableDir(baseDir, null);
@@ -428,7 +487,7 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 
 		if  (baseDir == null) {
 			JOptionPane.showMessageDialog(parent, "None of the default directories allows to write a file.\nPlease select a directory to permanently store DataWarrior update files!", "Select Update Directory", JOptionPane.WARNING_MESSAGE);
-			while (baseDir == null) {
+			while (true) {
 				JFileChooser fileChooser = new JFileChooser(System.getProperty("user.home"));
 				fileChooser.setDialogTitle("Select Directory For Update Files");
 				fileChooser.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
@@ -450,7 +509,7 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 		return baseDir;
 		}
 
-	private static final String getWritableDir(String baseDirName, String dirName) {
+	private static String getWritableDir(String baseDirName, String dirName) {
 		File baseDir = new File(baseDirName);
 		if (baseDir.exists()) {
 			String writabelDirName = baseDirName;
@@ -462,7 +521,7 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 						return null;
 					}
 
-				File testFile = new File(writabelDirName.concat(File.separator).concat("empty.txt"));
+				File testFile = new File(writabelDirName.concat(File.separator).concat("emptyABCXYZ.txt"));
 				testFile.createNewFile();
 				testFile.delete();
 				return writabelDirName;
@@ -483,11 +542,8 @@ public class DEUpdateHandler extends JDialog implements ActionListener {
 								+ "Do you want DataWarrior to open your web browser to check for an update?",
 						"DataWarrior Update Check in Web-Browser", JOptionPane.YES_NO_OPTION);
 				if (answer == JOptionPane.YES_OPTION) {
-					try {
-						BrowserControl.displayURL(url+"&error="+URLEncoder.encode(error, "UTF-8"));
-						}
-					catch (UnsupportedEncodingException uee) {}
-					}
+					BrowserControl.displayURL(url+"&error="+URLEncoder.encode(error, StandardCharsets.UTF_8));
+				}
 				});
 			}
 		}
